Site slogan changed

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -13,7 +13,7 @@
 				<a href="/" title="Startseite" rel="home" id="logo"><img src="/files/logo.jpg" alt="Startseite" /></a>
               	<div id="name-and-slogan">
                     <h1 id="site-name"><a href="/" title="Startseite" rel="home"><span>vLeygraf.de</span></a></h1>
-                    <div id="site-slogan">Virtuelles und weniger Virtuelles</div>
+                    <div id="site-slogan">Virtuelles und weniger Virtuelles von Christoph Leygraf</div>
                 </div><!-- /#name-and-slogan -->
         	</div></div><!-- /.section, /#header -->
 			<div id="main-wrapper"><div id="main">
