Added a new page with all links (Fundstuecke)

--- a/layouts/sidebar.html
+++ b/layouts/sidebar.html
@@ -2,6 +2,7 @@
 	<ul>
 		<li><a href="/" title="Startseite">Startseite</a></li>
 		<li><a href="/archiv/1/">Archiv</a></li>
+		<li><a href="/blog/cleygraf/alle_fundstuecke/">Alle Fundstücke</a></li>
 		<li><a href="/profil/">Profil</a></li>
 		<li><a href="/kontakt/">Kontakt</a></li>		
 	</ul>
