List all links by website finished

--- a/layouts/sidebar.html
+++ b/layouts/sidebar.html
@@ -2,7 +2,12 @@
 	<ul>
 		<li><a href="/" title="Startseite">Startseite</a></li>
 		<li><a href="/archiv/1/">Archiv</a></li>
-		<li><a href="/generated/alle_fundstuecke-1/">Alle Fundstücke</a></li>
+		<li>Alle Fundstüke
+		<ul>
+		<li>&nbsp&nbsp<a href="/generated/alle_fundstuecke-1/">nach Datum</a></li>
+		<li>&nbsp&nbsp<a href="/generated/fundstuecke-website-1/">nach Website</a></li>
+	</ul>
+	</li>
 		<li><a href="/profil/">Profil</a></li>
 		<li><a href="/kontakt/">Kontakt</a></li>		
 	</ul>
