Added "Fundstuecke nach Tags\ and several optimizations

--- a/layouts/sidebar.html
+++ b/layouts/sidebar.html
@@ -2,10 +2,11 @@
 	<ul>
 		<li><a href="/" title="Startseite">Startseite</a></li>
 		<li><a href="/archiv/1/">Archiv</a></li>
-		<li>Alle Fundstüke
+		<li>Die Fundstücke
 		<ul>
 		<li>&nbsp&nbsp<a href="/generated/alle_fundstuecke-1/">nach Datum</a></li>
 		<li>&nbsp&nbsp<a href="/generated/fundstuecke-website-1/">nach Website</a></li>
+		<li>&nbsp&nbsp<a href="/generated/tags-1/">nach Tag</a></li>
 	</ul>
 	</li>
 		<li><a href="/profil/">Profil</a></li>
